add annotation swagger in user feature
